@@ -99,6 +99,9 @@ template $SudokuGameView : Box {
       Label clock_label {
         can-focus: false;
         halign: center;
+        styles [
+          "numeric",
+        ]
       }
     }
   }
