@@ -23,6 +23,7 @@
 - Add headerbar transition effect
 - Cap grid margin size at 25 and top offset at 40
 - Remove unfullscreen button
+- Fix clock moving
 - Updated translations:
   Juliano de Souza Camargo (pt_BR); Martin (sl); Anders Jonsson (sv);
   Yuri Chornoivan (uk); Luming Zh (zh_CN). Yosef Or Boczko (he); Sergej
